force-app/main/default/objects/UserRegistration__c/UserRegistration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ユーザ登録</label>
</CustomObject>