force-app/main/default/objects/UserRegistration__c/fields/CommunityNicknameLabel__c.field-meta.xml
<CustomField>
    <fullName>CommunityNicknameLabel__c</fullName>
    <label>ニックネームラベル</label>
    <length>20</length>
    <type>Text</type>
</CustomField>