force-app/main/default/objects/UserRegistration__c/fields/CommunityUsernameLabel__c.field-meta.xml
<CustomField>
    <fullName>CommunityUsernameLabel__c</fullName>
    <label>コミュニティユーザ名ラベル</label>
    <length>20</length>
    <type>Text</type>
</CustomField>