force-app/main/default/objects/UserRegistration__c/fields/ConfirmPasswordLabel__c.field-meta.xml
<CustomField>
    <fullName>ConfirmPasswordLabel__c</fullName>
    <label>パスワード（確認）ラベル</label>
    <length>20</length>
    <type>Text</type>
</CustomField>