force-app/main/default/objects/UserRegistration__c/fields/DomainAccount__c.field-meta.xml
<CustomField>
    <fullName>DomainAccount__c</fullName>
    <label>ドメイン_企業コミュニティユーザ(社員)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>