force-app/main/default/objects/UserRegistration__c/fields/DomainRealEstateAgency__c.field-meta.xml
<CustomField>
    <fullName>DomainRealEstateAgency__c</fullName>
    <label>ドメイン_不動産コミュニティユーザ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>