force-app/main/default/objects/UserRegistration__c/fields/DummyEmailDomainAccount__c.field-meta.xml
<CustomField>
    <fullName>DummyEmailDomainAccount__c</fullName>
    <label>ダミーメールドメイン_企業コミュニティユーザ(社員)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>