force-app/main/default/objects/UserRegistration__c/fields/DummyEmailDomainRealEstateAgency__c.field-meta.xml
<CustomField>
    <fullName>DummyEmailDomainRealEstateAgency__c</fullName>
    <label>ダミーメールドメイン_不動産コミュニティユーザ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>