force-app/main/default/objects/UserRegistration__c/fields/EmailLabel__c.field-meta.xml
<CustomField>
    <fullName>EmailLabel__c</fullName>
    <label>メールアドレスラベル</label>
    <length>20</length>
    <type>Text</type>
</CustomField>