force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceAccountId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceAccountId__c</fullName>
    <label>メールテンプレート差込項目_取引先ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>