force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceCommunityNickname__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceCommunityNickname__c</fullName>
    <label>メールテンプレート差込項目_ニックネーム</label>
    <length>255</length>
    <type>Text</type>
</CustomField>