force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceCommunityUsername__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceCommunityUsername__c</fullName>
    <label>メールテンプレート差込項目_コミュニティユーザ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>