force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceEmail__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceEmail__c</fullName>
    <label>メールテンプレート差込項目_メールアドレス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>