force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceFirstName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceFirstName__c</fullName>
    <label>メールテンプレート差込項目_名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>