force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceLastName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceLastName__c</fullName>
    <label>メールテンプレート差込項目_姓</label>
    <length>255</length>
    <type>Text</type>
</CustomField>