force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplacePassword__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplacePassword__c</fullName>
    <label>メールテンプレート差込項目_パスワード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>