force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplacePhone__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplacePhone__c</fullName>
    <label>メールテンプレート差込項目_携帯電話</label>
    <length>255</length>
    <type>Text</type>
</CustomField>