force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceProfileId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceProfileId__c</fullName>
    <label>メールテンプレート差込項目_プロファイル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>