force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceUsername__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceUsername__c</fullName>
    <label>メールテンプレート差込項目_ユーザ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>