force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateReplaceUserPage__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateReplaceUserPage__c</fullName>
    <label>メールテンプレート差込項目_ユーザページ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>