force-app/main/default/objects/UserRegistration__c/fields/EmailTemplateUserRegistration__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateUserRegistration__c</fullName>
    <label>メールテンプレート_ユーザ登録</label>
    <length>18</length>
    <type>Text</type>
</CustomField>