force-app/main/default/objects/UserRegistration__c/fields/FirstnameLabel__c.field-meta.xml
<CustomField>
    <fullName>FirstnameLabel__c</fullName>
    <label>名ラベル</label>
    <length>20</length>
    <type>Text</type>
</CustomField>