force-app/main/default/objects/UserRegistration__c/fields/InputErrorMessageAccountId__c.field-meta.xml
<CustomField>
    <fullName>InputErrorMessageAccountId__c</fullName>
    <label>入力エラーメッセージ_取引先ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>