force-app/main/default/objects/UserRegistration__c/fields/LastnameLabel__c.field-meta.xml
<CustomField>
    <fullName>LastnameLabel__c</fullName>
    <label>姓ラベル</label>
    <length>20</length>
    <type>Text</type>
</CustomField>