force-app/main/default/objects/UserRegistration__c/fields/OrgWideEmailAddressName__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailAddressName__c</fullName>
    <label>組織のメールアドレス名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>