force-app/main/default/objects/UserRegistration__c/fields/PasswordLabel__c.field-meta.xml
<CustomField>
    <fullName>PasswordLabel__c</fullName>
    <label>パスワードラベル</label>
    <length>20</length>
    <type>Text</type>
</CustomField>