force-app/main/default/objects/UserRegistration__c/fields/PhoneLabel__c.field-meta.xml
<CustomField>
    <fullName>PhoneLabel__c</fullName>
    <label>携帯電話ラベル</label>
    <length>20</length>
    <type>Text</type>
</CustomField>