force-app/main/default/objects/UserRegistration__c/fields/ProfileAccount__c.field-meta.xml
<CustomField>
    <fullName>ProfileAccount__c</fullName>
    <label>プロファイル_企業コミュニティユーザ(社員)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>