force-app/main/default/objects/UserRegistration__c/fields/ProfileRealEstateAgency__c.field-meta.xml
<CustomField>
    <fullName>ProfileRealEstateAgency__c</fullName>
    <label>プロファイル_不動産コミュニティユーザ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>