force-app/main/default/objects/UserRegistration__c/fields/RecordTypeAccountAccount__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeAccountAccount__c</fullName>
    <label>レコードタイプ_取引先_委託企業</label>
    <length>18</length>
    <type>Text</type>
</CustomField>