force-app/main/default/objects/UserRegistration__c/fields/RecordTypeAccountRealEstateAgency__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeAccountRealEstateAgency__c</fullName>
    <label>レコードタイプ_取引先_不動産会社</label>
    <length>18</length>
    <type>Text</type>
</CustomField>