force-app/main/default/objects/UserRegistration__c/fields/RecordTypeContactAccount__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeContactAccount__c</fullName>
    <label>レコードタイプ_取引先担当者_企業社員</label>
    <length>18</length>
    <type>Text</type>
</CustomField>