force-app/main/default/objects/UserRegistration__c/fields/RecordTypeContactCompanyStaff__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeContactCompanyStaff__c</fullName>
    <label>レコードタイプ_取引先担当者_社宅担当者</label>
    <length>18</length>
    <type>Text</type>
</CustomField>