force-app/main/default/objects/UserRegistration__c/fields/RecordTypeContactRealEstateAgency__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeContactRealEstateAgency__c</fullName>
    <label>レコードタイプ_取引先担当者_不動産管理会社</label>
    <length>18</length>
    <type>Text</type>
</CustomField>