force-app/main/default/objects/UserRegistration__c/fields/RequiredErrorMessageAccountId__c.field-meta.xml
<CustomField>
    <fullName>RequiredErrorMessageAccountId__c</fullName>
    <label>必須エラーメッセージ_取引先ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>