force-app/main/default/objects/UserRegistration__c/fields/RequiredErrorMessageCommunityNickname__c.field-meta.xml
<CustomField>
    <fullName>RequiredErrorMessageCommunityNickname__c</fullName>
    <label>必須エラーメッセージ_ニックネーム</label>
    <length>255</length>
    <type>Text</type>
</CustomField>