force-app/main/default/objects/UserRegistration__c/fields/RequiredErrorMessageCommunityUsername__c.field-meta.xml
<CustomField>
    <fullName>RequiredErrorMessageCommunityUsername__c</fullName>
    <label>必須エラーメッセージ_ユーザ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>