force-app/main/default/objects/UserRegistration__c/fields/RequiredErrorMessageFirstname__c.field-meta.xml
<CustomField>
    <fullName>RequiredErrorMessageFirstname__c</fullName>
    <label>必須エラーメッセージ_名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>