force-app/main/default/objects/UserRegistration__c/fields/RequiredErrorMessageLastname__c.field-meta.xml
<CustomField>
    <fullName>RequiredErrorMessageLastname__c</fullName>
    <label>必須エラーメッセージ_姓</label>
    <length>255</length>
    <type>Text</type>
</CustomField>