force-app/main/default/objects/UserRegistration__c/fields/RequiredErrorMessagePassword__c.field-meta.xml
<CustomField>
    <fullName>RequiredErrorMessagePassword__c</fullName>
    <label>必須エラーメッセージ_パスワード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>