force-app/main/default/objects/UserRegistration__c/fields/SobjectTypeAccount__c.field-meta.xml
<CustomField>
    <fullName>SobjectTypeAccount__c</fullName>
    <label>オブジェクトタイプ_取引先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>