force-app/main/default/objects/UserRegistration__c/fields/SobjectTypeContact__c.field-meta.xml
<CustomField>
    <fullName>SobjectTypeContact__c</fullName>
    <label>オブジェクトタイプ_取引先担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>